# fiber

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  dump.txt  package.json  rust-toolchain.toml  typos.toml
crates/fiber-bin/: Cargo.toml
crates/fiber-bin/src/: main.rs
crates/fiber-cli/: Cargo.toml  README.md  build.rs
crates/fiber-cli/src/: colorize.rs  command_defs.rs  main.rs  rpc_client.rs  spinner.rs  tests.rs
crates/fiber-cli/src/commands/: cch.rs  channel.rs  dev.rs  graph.rs  info.rs  invoice.rs  mod.rs  payment.rs  peer.rs  prof.rs  watchtower.rs
crates/fiber-cli/src/tui/: app.rs  event.rs  mod.rs  theme.rs  ui.rs
crates/fiber-cli/src/tui/tabs/: channels.rs  dashboard.rs  graph.rs  invoices.rs  logs.rs  mod.rs  payments.rs  peers.rs
crates/fiber-cli/tests/: common.rs  integration.rs
crates/fiber-json-types/: Cargo.toml
crates/fiber-json-types/src/: cch.rs  channel.rs  cli_tests.rs  context.rs  convert.rs  dev.rs  fee.rs  graph.rs  hash256.rs  info.rs  invoice.rs  lib.rs  payment.rs  peer.rs  prof.rs  pubkey.rs  schema_helpers.rs  serde_utils.rs  watchtower.rs
crates/fiber-lib/: Cargo.toml
crates/fiber-lib/benches/: biscuit_benchmarks.rs  compare_bench.py  gossip_propagation.rs  gossip_sync_recovery.rs  payment_benchmarks.rs
crates/fiber-lib/fuzz/: Cargo.toml
crates/fiber-lib/fuzz/fuzz_targets/: fuzz_cursor.rs  fuzz_fiber_message.rs  fuzz_gossip_message.rs  fuzz_invoice.rs  fuzz_molecule_types.rs  fuzz_onion_packet.rs  fuzz_pubkey.rs  fuzz_sphinx_packet.rs  fuzz_store_deserialize.rs
crates/fiber-lib/src/: actors.rs  build.rs  config.rs  errors.rs  event_handler.rs  lib.rs  metrics.rs  tasks.rs
crates/fiber-lib/src/cch/: actor.rs  cch_fiber_agent.rs  config.rs  error.rs  events.rs  mod.rs  order.rs  order_guard.rs  order_store.rs  orders_db.rs  scheduler.rs
crates/fiber-lib/src/cch/actions/: backend_dispatchers.rs  mod.rs  send_outgoing_payment.rs  settle_incoming_invoice.rs  track_incoming_invoice.rs  (+1 more)
crates/fiber-lib/src/ckb/: actor.rs  client.rs  config.rs  contracts.rs  error.rs  jsonrpc_types_convert.rs  mod.rs  signer.rs  tx_tracing_actor.rs
crates/fiber-lib/src/fiber/: amp.rs  builtin_records.rs  channel.rs  config.rs  features.rs  fee.rs  gossip.rs  graph.rs  hash_algorithm.rs  history.rs  in_flight_ckb_tx_actor.rs  key.rs  mod.rs  network.rs  onion_service.rs  path.rs  payment.rs  profiling.rs  proxy.rs  serde_utils.rs  settle_tlc_set_command.rs  types.rs  watchtower_query.rs  watchtower_query_actor.rs
crates/fiber-lib/src/invoice/: errors.rs  invoice_impl.rs  mod.rs  store.rs  utils.rs
crates/fiber-lib/src/rpc/: README.md  biscuit.rs  cch.rs  channel.rs  config.rs  context.rs  convert.rs  dev.rs  fee.rs  graph.rs  info.rs  invoice.rs  middleware.rs  mod.rs  payment.rs  peer.rs  prof.rs  pubsub.rs  schema_helpers.rs  utils.rs  watchtower.rs
crates/fiber-lib/src/store/: .schema.json  audit.rs  db_migrate.rs  migration.rs  mod.rs  restore.rs  schema.rs  store_trait.rs  subscription.rs
crates/fiber-lib/src/tests/: gen_utils.rs  test_utils.rs
crates/fiber-lib/src/utils/: actor.rs  encrypt_decrypt_file.rs  mod.rs  payment.rs  tx.rs
crates/fiber-lib/src/watchtower/: actor.rs  mod.rs  store.rs
crates/fiber-store/: Cargo.toml  build.rs
crates/fiber-store/src/: backend.rs  browser.rs  browser_test.rs  db_migrate.rs  error.rs  iterator.rs  lib.rs  migration.rs  native.rs  restore.rs  sqlite.rs
crates/fiber-types/: Cargo.toml
crates/fiber-types/src/: audit.rs  cch.rs  channel.rs  config.rs  invoice.rs  lib.rs  network.rs  onion.rs  payment.rs  primitives.rs  protocol.rs  schema.rs  schema_helpers.rs  serde_utils.rs  watchtower.rs
crates/fiber-types/src/sample/: broadcast.rs  cch.rs  channel_actor_data.rs  channel_open.rs  invoice.rs  mod.rs  network.rs  payment.rs  timed_result.rs  watchtower.rs
crates/fiber-types/src/schema/: README.md
crates/fiber-wasm/: .gitignore  Cargo.toml  index.ts  package.json  tsconfig.json  webpack.config.js
crates/fiber-wasm-db-worker/: .gitignore  Cargo.toml  index.ts  package.json  tsconfig.json  webpack.config.js
crates/fiber-wasm-db-worker/src/: db.rs  lib.rs  util.rs
crates/fiber-wasm/src/: api.rs  lib.rs
crates/fiber-wasm/tests/: optional_params.rs  payment_params.rs
crates/fnn-cli/: Cargo.toml
crates/fnn-cli/src/: colorize.rs  main.rs  rpc_client.rs
crates/fnn-cli/src/commands/: cch.rs  channel.rs  dev.rs  graph.rs  info.rs  invoice.rs  mod.rs  payment.rs  peer.rs  prof.rs  utils.rs  watchtower.rs
fiber-bin/: Cargo.toml
fiber-bin/src/: main.rs
fiber-bin/src/rpc/: cch.rs  channel.rs  dev.rs  graph.rs  info.rs  invoice.rs  mod.rs  payment.rs  peer.rs
gui/: Cargo.toml
gui/src/: db.rs  lib.rs  main.rs  ui.rs
migrate/: Cargo.toml  build.rs
migrate/src/: lib.rs  main.rs  util.rs
migrate/src/migrations/: mig_20250114.rs  mig_20250115.rs  mig_20250120.rs  mig_20250123.rs  mig_20250226.rs  mig_20250227.rs  mig_20250307.rs  mig_20250308.rs  mig_20250318.rs  mig_20250328.rs  mig_20250405.rs  mig_20250407.rs  mig_20250428.rs  mig_20250507.rs  mig_20250617.rs  mig_20250724.rs  mig_20251219.rs  mig_20260203.rs  mig_20260203_channel_index.rs  mig_20260203_trampoline.rs  mig_20260204_pubkey_channel_index.rs  mig_20260301_network_state_pubkey.rs  mig_20260302_channel_open_record.rs  mig_20260302_channel_replay_fields.rs  mod.rs  sample.rs
migrate/src/migrations_backup/: mig_20250115.rs  mig_20250308.rs  mig_20250318.rs  mig_20250428.rs  mig_20250617.rs
migrate/src/tests/: migration_tests.rs  mod.rs  sample_tests.rs
openrpc-json-generator/: .gitignore  Cargo.toml  README.md  build.rs
openrpc-json-generator/openrpsee-0.1.0/: Cargo.toml  README.md
openrpc-json-generator/openrpsee-0.1.0/src/: lib.rs  openrpc.rs
openrpc-json-generator/src/: main.rs  methods.rs
tests/deploy/udt-init/: Cargo.toml  README.md  init.sh
tests/deploy/udt-init/src/: main.rs
tests/funding-tx-builder/: Cargo.toml
tests/funding-tx-builder/src/: main.rs
tests/perf/: Cargo.toml
tests/perf/src/: benchmark.rs  lib.rs  main.rs
(+1242 files in other folders)
