[workspace]
members = [
    "crates/fiber-lib",
    "crates/fiber-bin",
    "crates/fiber-store",
    "crates/fiber-wasm",
    "crates/fiber-wasm-db-worker",
    "crates/fiber-wasm-db-common",
    "crates/fiber-types",
    "crates/fiber-json-types",
    "crates/fiber-cli",
    "crates/fiber-cli-derive",
]
exclude = ["rpc-doc-gen"]
resolver = "2"
default-members = ["crates/fiber-bin", "crates/fiber-lib"]
[profile.release]
overflow-checks = true

[profile.quick_test]
inherits = "test"
opt-level = 3
debug = false

[profile.prof]
inherits = "release"
debug = true
