[package]
name = "fnn-gui"
version = "0.5.1"
edition = "2021"

[dependencies]
rocksdb = { package = "ckb-rocksdb", version = "=0.21.1", features = [
    "lz4",
], default-features = false }
fiber = { package = "fnn", path = "../crates/fiber-lib" }
ratatui = { version = "0.26" }
crossterm = { version = "0.27"}
rand = "0.8.5"
tentacle = { version = "0.6.6", default-features = false}
chrono = "0.4.41"

[features]
default = []

[workspace]
