[package]
name = "fnn-migrate"
version = "0.6.1-rc2"
edition = "2021"
build = "build.rs"

[dependencies]

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.18"
console = "0.16.0"
bincode = "1.3.3"
thiserror = "1.0.58"
serde = { version = "1.0.197", features = ["derive"] }
hex = "0.4.3"
clap = { version = "4.0", features = ["derive"] }
fiber = { package = "fnn", path = "../crates/fiber-lib" }
fiber_v060 = { package = "fnn", git = "https://github.com/nervosnetwork/fiber.git", tag = "v0.6.0" }
fiber_v061 = { package = "fnn", git = "https://github.com/nervosnetwork/fiber.git", rev = "491fdd2" }
serde_json = "1.0.135"
ouroboros = "0.18.5"

[features]
default = []

[workspace]
