[package]
name = "fnn-migrate"
version = "0.7.0-rc1"
edition = "2021"
build = "build.rs"

[dependencies]

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.18"
console = "0.16.0"
bincode = "1.3.3"
thiserror = "1.0.58"
serde = { version = "1.0.197", features = ["derive"] }
hex = "0.4.3"
clap = { version = "4.0", features = ["derive"] }
ckb-types = "1"
fiber_v060 = { package = "fnn", git = "https://github.com/nervosnetwork/fiber.git", branch = "migrate/v0.6.0" }
fiber_v061 = { package = "fnn", git = "https://github.com/nervosnetwork/fiber.git", branch = "migrate/v0.6.1" }
fiber_v070 = { package = "fnn", git = "https://github.com/nervosnetwork/fiber.git", branch = "quake/oneway-channel"}
serde_json = "1.0.135"
ouroboros = "0.18.5"

[features]
default = []

[workspace]
