[package]
edition = "2024"
name = "openrpc-json-generator"
version = "0.1.0"

[dependencies]
fnn = {path = "../crates/fiber-lib"}
openrpsee = {git = "https://github.com/Officeyutong/openrpsee"}
phf = {version = "0.13.1", features = ["macros"]}
serde_json = "1"
# Pin ckb crates to 1.0.x to keep molecule 0.8.0 compatibility with fiber-types
ckb-types = ">=1.0.0, <1.1.0"
ckb-gen-types = ">=1.0.0, <1.1.0"

[build-dependencies]
openrpsee = {git = "https://github.com/Officeyutong/openrpsee"}

[workspace]
