[package]
name = "fnn-cli"
version = "0.8.0"
edition = "2021"
description = "Command-line interface for Fiber Network Node (FNN)"

[[bin]]
name = "fnn-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "string", "env"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
rustyline = { version = "15", features = ["derive"] }
anyhow = "1.0"
colored = "2"
indicatif = "0.17"
fiber-json-types = { path = "../fiber-json-types" , features = ["cch", "watchtower"]}
ckb-jsonrpc-types = "1"

[build-dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

[package.metadata.cargo-shear]
ignored = ["ckb-jsonrpc-types"] # used in build.rs-generated code (cli_generated.rs)

[lints.clippy]
needless-return = "allow"
upper-case-acronyms = "allow"
