[package]
build = "src/build.rs"
edition = "2021"
name = "fnn"
version = "0.5.1"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.81"
bech32 = "0.9"
bitcoin = {version = "0.30.2", features = ["serde", "rand"]}
bitflags = {version = "2.5.0", features = ["serde"]}
futures = "0.3.30"
parking_lot = "0.12"
once_cell = "1.19.0"
tokio-util = { version = "0.7.10", features = ["rt"] }
molecule = { version = "0.8.0", default-features = false }
ckb-types = "0.202.0"
ckb-gen-types = "0.202.0"
ckb-jsonrpc-types = "0.202.0"
ckb-sdk = "4.1.0"
hex = "0.4.3"
lightning-invoice = {version = "0.29.0"}
musig2 = {version = "0.0.11", features = ["secp256k1", "serde"]}
rand = "0.8.5"
secp256k1 = {version = "0.28.0", features = ["serde", "recovery", "rand-std"]}
serde = {version = "1.0.197", features = ["derive"]}
serde_json = {version = "1.0"}
serde_with = {version = "3.7.0", features = ["macros", "base64"]}
serde_yaml = "0.9.32"
thiserror = "1.0.58"
aes-gcm = "0.10"
arcode = "0.2.4"
async-trait = "0.1"
bincode = "1.3.3"
bitmask-enum = "2.2.5"
ckb-testtool = {version = "0.16.0", optional = true}
clap = {version = "4.5.2", features = ["derive", "env", "string"]}
clap-serde-derive = "0.2.1"
either = "1.15.0"
fiber-sphinx = "2.1.0"
getrandom = {version = "0.2", features = ["js"]}
git-version = "0.3.9"
indicatif = "0.18"
nom = "7.1.3"
num_enum = "0.7.3"
paste = "1.0"
ractor = {"git" = "https://github.com/officeyutong/ractor", branch = "use-non-send-future-in-wasm", features = [
  "async-trait",
]}
regex = "1.10.5"
scrypt = "0.11"
strum = {version = "0.26", features = ["derive"]}
tempfile = {version = "3.10.1", optional = true}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
bs58 = "0.5.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ckb-hash = "0.202.0"
clap = {version = "4.5.2", features = ["derive", "env", "string"]}
clap-serde-derive = "0.2.1"
console = "0.16.0"
home = "0.5.9"
jsonrpsee = {version = "0.22", features = ["client", "server", "macros"]}
lnd-grpc-tonic-client = "0.3.0"
rocksdb = {package = "ckb-rocksdb", version = "=0.21.1", features = [
  "lz4",
], default-features = false}
socket2 = "0.5.7"
tentacle = {version = "0.6.6", default-features = false, features = [
  "upnp",
  "parking_lot",
  "openssl-vendored",
  "tokio-runtime",
  "tokio-timer",
  "ws",
]}
tokio = {version = "1", features = [
  "io-util",
  "macros",
  "rt",
  "rt-multi-thread",
  "sync",
  "net",
  "time",
  "signal",
  "process",
]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
ckb-hash = {version = "0.202.0", features = [
  "blake2b-ref",
], default-features = false}
console_error_panic_hook = {version = "0.1.7"}
jsonrpsee = {version = "0.22", features = [
  "macros",
  "server-core",
  "wasm-client",
]}
tentacle = {version = "0.7", default-features = false, features = [
  "wasm-timer",
]}
tokio = {version = "1", features = ["io-util", "macros", "rt", "sync"]}
tracing = {version = "0.1", features = ["log"]}
tower = { version = "0.5" }
hyper = { version = "1.5" }

lnd-grpc-tonic-client = "0.3.0"
home = "0.5.9"
biscuit-auth = "6.0.0-beta.3"
getrandom = { version = "0.3", features = ["wasm_js"] }
fiber-wasm-db-common = { path = "../fiber-wasm-db-common" }
web-sys = "0.3.72"
wasm-bindgen = "0.2.84"
web-time = {version = "1.1.0", features = ["serde"]}

[features]
bench = ["tempfile", "ckb-testtool"]
default = ["watchtower"]
portable = ["rocksdb/portable"]
watchtower = []

[dev-dependencies]
ciborium = "0.2.2"
ckb-testtool = "0.16.0"
jsonrpsee = { version = "0.25.1", features = ["server", "macros", "http-client"] }
ouroboros = "0.18.5"
futures = "0.3.31"
tempfile = "3.10.1"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
jsonrpsee = {version = "0.22", features = ["server", "macros", "http-client"]}
criterion = {version = "0.5", features = ["html_reports"]}

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.50"

[lints.clippy]
expect-fun-call = "allow"
fallible-impl-from = "allow"
large-enum-variant = "allow"
mutable-key-type = "allow"
needless-return = "allow"
upper-case-acronyms = "allow"

[package.metadata.cargo-shear]
ignored = ["getrandom"]

[[bench]]
harness = false
name = "payment_benchmarks"

[[bench]]
name = "biscuit_benchmarks"
harness = false
