[package]
name = "fiber-types"
version = "0.7.1"
edition = "2021"
description = "Core domain types for the Fiber Network"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.7", features = ["macros"] }

# Encoding
hex = "0.4"
bs58 = "0.5.1"
bech32 = "0.9"

# CKB types
ckb-types = "0.202.0"
ckb-gen-types = "0.202.0"
molecule = { version = "0.8.0", default-features = false }

# Hashing (for HashAlgorithm::hash())
ckb-hash = "0.202.0"
bitcoin = { version = "0.32", features = ["serde"] }

# Cryptography
secp256k1 = { version = "0.30.0", features = ["serde", "recovery", "global-context"] }
musig2 = { version = "0.2.4", features = ["secp256k1", "serde"] }

# Macros
paste = "1.0"

# Storage serialization
bincode = "1.3"

# Network identity (minimal, only for PeerId and Multiaddr types)
tentacle-secio = { version = "0.6", default-features = false }
tentacle-multiaddr = "0.3"

# CKB JSON-RPC types (for serializable wrappers)
ckb-jsonrpc-types = "0.202.0"

# Other
anyhow = "1.0.81"
bitflags = { version = "2.5.0", features = ["serde"] }
thiserror = "1.0.58"

[features]
default = ["watchtower"]
watchtower = []

[lints.clippy]
expect-fun-call = "allow"
needless-return = "allow"
upper-case-acronyms = "allow"
