[package]
name = "fiber-types"
version = "0.7.1"
edition = "2021"
description = "Core domain types for the Fiber Network"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.7", features = ["macros"] }
once_cell = "1.19.0"

# Encoding
hex = "0.4"
bs58 = "0.5.1"
bech32 = "0.9"

# CKB types
ckb-types = "0.202.0"
ckb-gen-types = "0.202.0"
molecule = { version = "0.8.0", default-features = false }

# Hashing (for HashAlgorithm::hash())
ckb-hash = "0.202.0"
bitcoin = { version = "0.32", features = ["serde"] }

# Cryptography
secp256k1 = { version = "0.30.0", features = ["serde", "recovery", "global-context", "rand"] }
musig2 = { version = "0.2.4", features = ["secp256k1", "serde"] }
fiber-sphinx = "2.3"

# Macros
paste = "1.0"

# Storage serialization
bincode = "1.3"

# Network identity (minimal, only for PeerId and Multiaddr types)
tentacle-secio = { version = "0.6", default-features = false }
tentacle-multiaddr = "0.3"

# CKB JSON-RPC types (for serializable wrappers)
ckb-jsonrpc-types = "0.202.0"

# Logging
tracing = "0.1"

# Other
anyhow = "1.0.81"
bitflags = { version = "2.5.0", features = ["serde"] }
thiserror = "1.0.58"
num_enum = "0.7"
strum = { version = "0.26", features = ["derive"] }
lightning-invoice = "0.33"
serde_json = "1.0"

# Invoice encoding
arcode = "0.2.4"
nom = "7.1.3"

# WASM-compatible time (used on wasm32 targets instead of std::time)
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time = "1.1.0"

[features]
default = ["watchtower"]
watchtower = []

[lints.clippy]
expect-fun-call = "allow"
needless-return = "allow"
upper-case-acronyms = "allow"
