[package]
name = "fiber-types"
version = "0.8.0-rc1"
edition = "2021"
description = "Core domain types for the Fiber Network"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.7", features = ["macros"] }

# Encoding
hex = "0.4"
bs58 = "0.5.1"
bech32 = "0.9"

# CKB types
ckb-types = "1"
ckb-gen-types = "1"
molecule = { version = "0.9.2", default-features = false }

# Hashing
ckb-hash = "1"
sha2 = "0.10"

# CCH-only dependencies (cross-chain hub, Lightning interop)
bitcoin = { version = "0.32", features = ["serde"], optional = true }
lightning-invoice = { version = "0.33", optional = true }

# Cryptography
secp256k1 = { version = "0.30.0", features = ["serde", "recovery", "global-context", "rand"] }
musig2 = { version = "0.2.4", features = ["secp256k1", "serde"] }
fiber-sphinx = "2.3"

# Macros
paste = "1.0"

# Storage serialization
bincode = "1.3"

# Network (minimal, only for Multiaddr types)
tentacle-multiaddr = "0.3"

# CKB JSON-RPC types (for serializable wrappers)
ckb-jsonrpc-types = "1"

# Logging
tracing = "0.1"

# Other
anyhow = "1.0.81"
bitflags = { version = "2.5.0", features = ["serde"] }
thiserror = "1.0.58"
num_enum = "0.7"
strum = { version = "0.26", features = ["derive"] }
serde_json = "1.0"

# Invoice encoding
arcode = "0.2.4"
nom = "7.1.3"

# WASM-compatible randomness (getrandom is an indirect dep via secp256k1/rand;
# on wasm32-unknown-unknown we must enable "js" so it compiles)
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
web-time = { version = "1.1.0", features = ["serde"] }

[features]
default = []
cch = ["bitcoin", "lightning-invoice"]
watchtower = []
sample = []

[package.metadata.cargo-shear]
ignored = ["getrandom"]

[lints.clippy]
expect-fun-call = "allow"
needless-return = "allow"
upper-case-acronyms = "allow"
