[package]
name = "fiber-wasm-db-worker"
version = "0.6.0-rc1"
edition = "2024"

[dependencies]
web-sys = "0.3.72"
console_error_panic_hook = { version = "0.1.7" }
idb = "0.6.4"
serde = { version = "1.0.215", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.84"
wasm-logger = "0.2.0"
wasm-bindgen-futures = "0.4.45"
log = "0.4.27"
fiber-wasm-db-common = {path = "../fiber-wasm-db-common"}
anyhow = "1.0.98"

[lib]
crate-type = ["cdylib", "rlib"]
