[package]
name = "fnn-cli"
version = "0.7.1"
edition = "2021"
description = "Command-line interface for Fiber Network Node (FNN)"

[[bin]]
name = "fnn-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "string"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
rustyline = { version = "15", features = ["derive"] }
anyhow = "1.0"
colored = "2"

[lints.clippy]
needless-return = "allow"
upper-case-acronyms = "allow"
