[package]
name = "fiber-e2e-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }

[[bin]]
name = "run-test"
path = "src/main.rs"

[workspace]
