[package]
name = "udt-init"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-sdk = { version = "5" }
ckb-types = "1"
ckb-jsonrpc-types = "1"
ckb-chain-spec = "1"
ckb-resource = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
rand = "0.8.5"
tokio = "1.44.2"

[workspace]
